test/asm/ref-override-bad.err
error: `X` already referenced
    at ref-override-bad.asm(8)
    and also:
    at ref-override-bad.asm(7)
error: `Y` already referenced
    at ref-override-bad.asm(13)
    and also:
    at ref-override-bad.asm(10)
Assembly aborted with 2 errors!
